--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <!-- Features Section -->
-    <section class="features" id="features" style="background-image: url('../assets/images/1.jpg')">
+    <section class="features" id="features" style="background-image: url('images/1.jpg')">
         <h2>Our Features</h2>
         <div class="feature-cards">
             <div class="card">
@@ -68,26 +68,26 @@
     </section>
 
   <!-- Testimonials Section -->
-<section class="testimonials" id="testimonials" style="background-image: url('../assets/images/2.jpg')">
+<section class="testimonials" id="testimonials" style="background-image: url('images/2.jpg')">
     <h2>What Our Users Say</h2>
     <div class="testimonial-cards">
         <div class="card">
-            <div class="user-image" style="background-image: url('../assets/images/girl.jpg');"></div>
+            <div class="user-image" style="background-image: url('/images/girl.jpg');"></div>
             <p>"TimeFuture has completely transformed our operationals. It’s an absolute changer for our stream!"</p>
             <p>- Sarah Thompson, Operations Manager at TechWorld</p>
         </div>
         <div class="card">
-            <div class="user-image" style="background-image: url('../assets/images/eye.jpg');"></div>
+            <div class="user-image" style="background-image: url('images/eye.jpg');"></div>
             <p>"Before, I was about as useful as a fax machine. But after using this app, my boss saw my amazing work and dated me out. O my Gosh!."</p>
             <p>- John, Sales Associate </p>
         </div>
         <div class="card">
-            <div class="user-image" style="background-image: url('../assets/images/handsomeman.jpg');"></div>
+            <div class="user-image" style="background-image: url('images/handsomeman.jpg');"></div>
             <p>"Finally My Revenue is increased."</p>
             <p>- Tom Liu, CEO at InnovateTech</p>
         </div>
         <div class="card">
-            <div class="user-image" style="background-image: url('../assets/images/businessman.jpg');"></div>
+            <div class="user-image" style="background-image: url('images/businessman.jpg');"></div>
             <p>"Thanks to this application, my favorite employee is no longer like a fax machine. I am very happy with his work."</p>
             <p>- Mark Anderson, Product Manager at WebWorks</p>
         </div>
@@ -97,7 +97,7 @@
 
 
     <!-- Contact Section -->
-    <section class="contact" id="contact" style="background-image: url('../assets/images/library.jpg')">
+    <section class="contact" id="contact" style="background-image: url('images/library.jpg')">
         <h2>Get In Touch</h2>
         <form>
             <input type="text" placeholder="Name" required>
