--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>TimeFuture</title>
     
     <!-- Favicon -->
-    <link rel="icon" href="./assets/icons/future.jpg" type="image/x-icon">
+    <link rel="icon" href="icons/future.jpg" type="image/x-icon">
     
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/animation.css">
