--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <h2>What Our Users Say</h2>
     <div class="testimonial-cards">
         <div class="card">
-            <div class="user-image" style="background-image: url('/images/girl.jpg');"></div>
+            <div class="user-image" style="background-image: url('images/girl.jpg');"></div>
             <p>"TimeFuture has completely transformed our operationals. It’s an absolute changer for our stream!"</p>
             <p>- Sarah Thompson, Operations Manager at TechWorld</p>
         </div>
