--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
     <!-- Contact Section -->
-    <section class="contact" id="contact" style="background-image: url('images/library.jpg')">
+    <section class="contact" id="contact" style="background-image: url('assets/images/library.jpg')">
         <h2>Get In Touch</h2>
         <form>
             <input type="text" placeholder="Name" required>
