--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </section>
 
     <!-- Features Section -->
-    <section class="features" id="features" style="background-image: url('assets/images/1.jpg');">
+    <section class="features" id="features" style="background-image: url('assets/images/1.jpg')">
         <h2>Our Features</h2>
         <div class="feature-cards">
             <div class="card">
@@ -68,7 +68,7 @@
     </section>
 
   <!-- Testimonials Section -->
-<section class="testimonials" id="testimonials" style="background-image: url('assets/images/2.jpg');">
+<section class="testimonials" id="testimonials" style="background-image: url('assets/images/2.jpg')">
     <h2>What Our Users Say</h2>
     <div class="testimonial-cards">
         <div class="card">
